--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World !!!
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title> Preman Terminal </title>
+  <style>
+    /* CSS styles go here */
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #f1f2f6, #e6e9f0);
+    }
+    /* other css styles */
+  </style>
+</head>
+<body>
+  <!-- HTML content goes here -->
+  <header>
+    <nav>
+      <a href="#about-me">About Me</a>
+      <a href="#experience">Experience</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <section id="about-me">
+      <h1>About Me</h1>
+      <p>I am a full-stack developer with a focus on developing mobile apps using Flutter and data analysis.</p>
+    </section>
+    <!-- other section -->
+  </main>
+  <footer>
+    <p>Copyright © 2021 Me</p>
+  </footer>
+</body>
+</html>
