--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Preman Terminal </title>
+  <title>Siti Fatimah - Naamstudio</title>
   <style>
     /* CSS styles go here */
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #f1f2f6, #e6e9f0);
+      background-color: #f1f2f6;
+      color: #333;
+      text-align: center;
+    }
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
     }
     /* other css styles */
   </style>
@@ -15,22 +22,18 @@
 <body>
   <!-- HTML content goes here -->
   <header>
-    <nav>
-      <a href="#about-me">About Me</a>
-      <a href="#experience">Experience</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <h1>Siti Fatimah</h1>
+    <h2>Full-Stack Developer & Data Analyst</h2>
   </header>
   <main>
     <section id="about-me">
-      <h1>About Me</h1>
+      <h2>About Me</h2>
       <p>I am a full-stack developer with a focus on developing mobile apps using Flutter and data analysis.</p>
     </section>
     <!-- other section -->
   </main>
   <footer>
-    <p>Copyright © 2021 Me</p>
+    <p>Copyright © 2021 Siti Fatimah</p>
   </footer>
 </body>
 </html>
