--- a/index.html
+++ b/index.html
@@ -1,39 +1,18 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Siti Fatimah - Naamstudio</title>
-  <style>
-    /* CSS styles go here */
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f1f2f6;
-      color: #333;
-      text-align: center;
-    }
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-    }
-    /* other css styles */
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <title>Flutter Developer</title>
 </head>
 <body>
-  <!-- HTML content goes here -->
-  <header>
-    <h1>Siti Fatimah</h1>
-    <h2>Full-Stack Developer & Data Analyst</h2>
-  </header>
-  <main>
-    <section id="about-me">
-      <h2>About Me</h2>
-      <p>I am a full-stack developer with a focus on developing mobile apps using Flutter and data analysis.</p>
-    </section>
-    <!-- other section -->
-  </main>
-  <footer>
-    <p>Copyright © 2021 Siti Fatimah</p>
-  </footer>
+  <div class="container my-5">
+    <h1 class="text-center">Flutter Developer</h1>
+    <p class="text-center">Create beautiful and high-performance mobile apps with Flutter</p>
+    <div class="text-center">
+      <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+    </div>
+  </div>
 </body>
 </html>
